syntax = "proto3";

import "EntityType.proto";
option java_package = "org.sq.gameDemo.common.proto";
option java_outer_classname = "UserEntityProto";

//用户角色实体
message UserEntity {
    int32 typeId = 1; //其实可以去掉
    string nick = 2;//昵称
    int32 userId = 3;
    int32 state = 4;
    repeated EntityType type = 5;
}
//请求
message UserEntityRequestInfo {
    uint64 msg_id = 1;      //消息id
    uint64 time = 2;        //时间戳(单位:毫秒)
    int32 typeId = 3;
    int32 senceId = 4;
}
//响应
message UserEntityResponseInfo {
    uint64 msg_id = 1;      //消息id
    int32 result  = 2;
    uint64 time = 3;        //时间戳
    string content = 4;
    repeated UserEntity userEntity = 5;
}

